test/fail/timer-no-send.mo
import { setTimer } = "mo:⛔";

func bowm() {
    ignore setTimer(1_000_000, false, func () : async () { });
}
